--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -140,7 +140,7 @@
                             <tr>
                               	<td class="padding" align="center">
                                     <a href="http://www.thevarsity.co" target="_blank">
-                                        <img src="{{team_image}}" width="500" height="500" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
+                                        <img src="{{team_image}}" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
                                     </a>
                                 </td>
                             </tr>
@@ -235,7 +235,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="Fluid images" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Better Opportunities</td>
@@ -273,7 +273,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/kithen.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/kithen.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Stronger Connections</td>
@@ -335,7 +335,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">More Revenue</td>
@@ -373,7 +373,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Industry Insight</td>
