--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -112,7 +112,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
                 <tr>
                     <td align="center" valign="top" style="padding: 15px 0;" class="logo">
-                        <a href="http://www.thevarsity.co" target="_blank">
+                        <a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank">
                             <img alt="Logo" src="https://thevarsity.herokuapp.com/images/logo_white.png" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
                     </td>
@@ -139,7 +139,7 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               	<td class="padding" align="center">
-                                    <a href="http://www.thevarsity.co" target="_blank">
+                                    <a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank">
                                         <img src="{{team_image}}" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
                                     </a>
                                 </td>
@@ -169,10 +169,10 @@
                                             <td align="center" style="padding-top: 25px;" class="padding">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
-                                                    	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://www.thevarsity.co" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
+                                                    	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
                                                     </tr>
                                                     <tr>
-                                                        <td align="center" style="border-radius: 3px" bgcolor="#fff"><a href="http://www.thevarsity.co" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #333; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 2px solid green; display: inline-block;margin-top:24px; " class="mobile-button">Access Code: {{code}}</a></td>
+                                                        <td align="center" style="border-radius: 3px" bgcolor="#fff"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #333; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 2px solid green; display: inline-block;margin-top:24px; " class="mobile-button">Access Code: {{code}}</a></td>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -238,7 +238,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="Fluid images" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="Fluid images" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Better Opportunities</td>
@@ -247,7 +247,7 @@
                                                                         <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Every group has a bulletin board where professional opportunities are posted. Hiring companies can better target specific skillsets by posting in the right groups.</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                     </tr>
                                                                 </table>
                                                             </td>
@@ -276,7 +276,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/kithen.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="https://thevarsity.herokuapp.com/images/kithen.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Stronger Connections</td>
@@ -285,7 +285,7 @@
                                                                                     <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Groups are maintained by members through invite-only. No more spam from salesman, recruiters, and such. The Varsity cuts out the noise.</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                                 </tr>
                                                                             </table>
                                                                         </td>
@@ -338,7 +338,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">More Revenue</td>
@@ -347,7 +347,7 @@
                                                                         <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Group admins can charge fees for posting to the bulletin board. Fees go directly to the group moderator. * This is a premium feature.</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                     </tr>
                                                                 </table>
                                                             </td>
@@ -376,7 +376,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Industry Insight</td>
@@ -385,7 +385,7 @@
                                                                                     <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Learn from your peers as you share professional insight on how to hone your craft, gain new clientele, promote your brand and expand your business.</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                                 </tr>
                                                                             </table>
                                                                         </td>
@@ -435,7 +435,7 @@
                     <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
                         &copy; 2017, The Varsity
                         <br>
-                        <a href="http://www.thevarsity.co" target="_blank" style="color: #666666; text-decoration: none;">www.thevarsity.co</a>
+                        <a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="color: #666666; text-decoration: none;">www.thevarsity.co</a>
                         <span style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                         <a href="https://thevarsity.herokuapp.com/account/unsubscribe?email={{email}}" target="_blank" style="color: #666666; text-decoration: none;">Unsubscribe</a>
                     </td>
